Fix text overflow in transactions display by using div/span instead of tables/tr/td with proper css. (tested against: Linux/Firefox3, Windows/Firefox2, Windows/IE7, Windows/Safari, Windows/IE6)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/3.8/trunk@16660 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/ticket.css
+++ b/share/html/NoAuth/css/web2/ticket.css
@@ -65,8 +65,9 @@ div#ticket-history {
 
 }
 
-.ticket-transaction tr.metadata td { padding-top: 0.75em;} 
-.ticket-transaction tr.metadata td.actions {
+.ticket-transaction div.metadata span.actions {
+ position: absolute;
+ right: 2.3em;
  padding: 0em;
  background: #ccc;
  text-align: right;
@@ -75,16 +76,16 @@ div#ticket-history {
  color: #ccc;
  -moz-border-radius-bottomleft: 0.5em;
  -webkit-border-bottom-left-radius: 0.5em;
- width: 1em;
  white-space: nowrap;
 }
 
-.ticket-transaction tr.metadata  td.type {
+.ticket-transaction div.metadata  span.type {
  text-align: center;
  position: absolute;
  margin: 0.25em;
  width: 1em;
  height: 1.25em;
+ padding-top: 0.75em;
  padding: none;
  border-right: 1px solid #999;
  border-bottom: 1px solid #999;
@@ -92,25 +93,29 @@ div#ticket-history {
  -webkit-border-bottom-right-radius: 0.25em;
 }
 
-div#ticket-history td.type a {
+div#ticket-history span.type a {
  color: #fff;
 }
 
 
-div#ticket-history td.date {
- padding-left: 2em;
+div#ticket-history span.date {
+ margin-left: 2em;
  width: 10em;
 }
 
 
-div#ticket-history td.description {
- padding-left: 1em;
+div#ticket-history span.description {
+ margin-left: 1em;
  font-weight: bold;
 }
 
-div#ticket-history td.content {
- position: relative;
+div#ticket-history span.time-taken {
+ margin-left: 1em;
+}
+
+div#ticket-history div.content {
  padding-right: 1em;
+ padding-bottom: 0.7em;
  font-size: 1.1em;
 }
 
@@ -122,7 +127,7 @@ div#ticket-history td.content {
  border-top: 1px solid #ccc;
  margin-left: 2em;
  overflow: auto;
-
+ min-height: 2.5em;
 }
 
 div#ticket-history div.downloadattachment {
@@ -132,11 +137,12 @@ font-size: 0.9em;
 text-align: right;
 background: #ddd;
 padding: 0.5em;
+margin-left: 1em;
 
 border: 1px solid #ccc;
 border-right: 2px solid #aaa;
 border-bottom: 2px solid #aaa;
-margin-top: 1em;
+margin-top: 0.5em;
 -moz-border-radius: 0.5em;
 -webkit-border-radius: 0.5em;
 
